--- a/index.html
+++ b/index.html
@@ -33,109 +33,142 @@
     <h1>Shares</h1>
     <div class="container">
       <section class="card">
-        <div><img src="lake.jpg">
+        <div class="image-div">
+          <img src="images/nature1.jpg">
+          <i class="fas fa-share"></i>
+          <p class="p2">views</p>
+          <p class="p3">02</p>
         </div>
         <article>
           <h2>Recipient's Name Here</h2>
-          <p>Monday 01/23/16 10:22am</p>
+          <p class="p1">Monday 01/23/16 10:22am</p>
           <p class="art-link">http://2win.2winstage.com/p/recipients_namehere</p>
           <h3>playlist</h3>
           <h2>Name of Playlist</h2>
-          <h3>attachments</h3>
+          <h3 class="h3">attachments</h3>
           <h4>04</h4>
         </article>
       </section>
       <section class="card">
-        <div><img src="lake.jpg">
+        <div class="image-div">
+          <img src="images/nature2.jpg">
+          <i class="fas fa-share"></i>
+          <p class="p2">views</p>
+          <p class="p3">02</p>
         </div>
         <article>
           <h2>Recipient's Name Here</h2>
-          <p>Monday 01/23/16 10:22am</p>
+          <p class="p1">Monday 01/23/16 10:22am</p>
           <p class="art-link">http://2win.2winstage.com/p/recipients_namehere</p>
           <h3>playlist</h3>
           <h2>Name of Playlist</h2>
-          <h3>attachments</h3>
+          <h3 class="h3">attachments</h3>
           <h4>04</h4>
         </article>
       </section>
       <section class="card">
-        <div><img src="lake.jpg">
+        <div class="image-div">
+          <img src="images/nature3.jpg">
+          <i class="fas fa-share"></i>
+          <p class="p2">views</p>
+          <p class="p3">02</p>
         </div>
         <article>
           <h2>Recipient's Name Here</h2>
-          <p>Monday 01/23/16 10:22am</p>
+          <p class="p1">Monday 01/23/16 10:22am</p>
           <p class="art-link">http://2win.2winstage.com/p/recipients_namehere</p>
           <h3>playlist</h3>
           <h2>Name of Playlist</h2>
-          <h3>attachments</h3>
+          <h3 class="h3">attachments</h3>
           <h4>04</h4>
         </article>
       </section>
       <section class="card">
-        <div><img src="lake.jpg">
+        <div class="image-div">
+          <img src="images/nature4.jpeg">
+          <i class="fas fa-share"></i>
+          <p class="p2">views</p>
+          <p class="p3">02</p>
         </div>
         <article>
           <h2>Recipient's Name Here</h2>
-          <p>Monday 01/23/16 10:22am</p>
+          <p class="p1">Monday 01/23/16 10:22am</p>
           <p class="art-link">http://2win.2winstage.com/p/recipients_namehere</p>
           <h3>playlist</h3>
           <h2>Name of Playlist</h2>
-          <h3>attachments</h3>
+          <h3 class="h3">attachments</h3>
           <h4>04</h4>
         </article>
       </section>
       <section class="card">
-        <div><img src="lake.jpg">
+        <div class="image-div">
+          <img src="images/nature5.jpg">
+          <i class="fas fa-share"></i>
+          <p class="p2">views</p>
+          <p class="p3">02</p>
         </div>
         <article>
           <h2>Recipient's Name Here</h2>
-          <p>Monday 01/23/16 10:22am</p>
+          <p class="p1">Monday 01/23/16 10:22am</p>
           <p class="art-link">http://2win.2winstage.com/p/recipients_namehere</p>
           <h3>playlist</h3>
           <h2>Name of Playlist</h2>
-          <h3>attachments</h3>
+          <h3 class="h3">attachments</h3>
           <h4>04</h4>
         </article>
       </section>
       <section class="card">
-        <div><img src="lake.jpg">
+        <div class="image-div">
+          <img src="images/nature6.jpg">
+          <i class="fas fa-share"></i>
+          <p class="p2">views</p>
+          <p class="p3">02</p>
         </div>
         <article>
           <h2>Recipient's Name Here</h2>
-          <p>Monday 01/23/16 10:22am</p>
+          <p class="p1">Monday 01/23/16 10:22am</p>
           <p class="art-link">http://2win.2winstage.com/p/recipients_namehere</p>
           <h3>playlist</h3>
           <h2>Name of Playlist</h2>
-          <h3>attachments</h3>
+          <h3 class="h3">attachments</h3>
           <h4>04</h4>
         </article>
       </section>
       <section class="card">
-        <div><img src="lake.jpg">
+        <div class="image-div">
+          <img src="images/nature7.jpg">
+          <i class="fas fa-share"></i>
+          <p class="p2">views</p>
+          <p class="p3">02</p>
         </div>
         <article>
           <h2>Recipient's Name Here</h2>
-          <p>Monday 01/23/16 10:22am</p>
+          <p class="p1">Monday 01/23/16 10:22am</p>
           <p class="art-link">http://2win.2winstage.com/p/recipients_namehere</p>
           <h3>playlist</h3>
           <h2>Name of Playlist</h2>
-          <h3>attachments</h3>
+          <h3 class="h3">attachments</h3>
           <h4>04</h4>
         </article>
       </section>
       <section class="card">
-        <div><img src="lake.jpg">
+        <div class="image-div">
+          <img src="images/nature8.jpg">
+          <i class="fas fa-share"></i>
+          <p class="p2">views</p>
+          <p class="p3">02</p>
         </div>
         <article>
           <h2>Recipient's Name Here</h2>
-          <p>Monday 01/23/16 10:22am</p>
+          <p class="p1">Monday 01/23/16 10:22am</p>
           <p class="art-link">http://2win.2winstage.com/p/recipients_namehere</p>
           <h3>playlist</h3>
           <h2>Name of Playlist</h2>
-          <h3>attachments</h3>
+          <h3 class="h3">attachments</h3>
           <h4>04</h4>
         </article>
       </section>
+
     </div>
   </main>
 </body>
